# memxy

./: COPYING  Makefile.am  NOTICE  README  configure.in
src/: Makefile.am  exception.h  gate_control.cc  gate_control.h  gate_memtext.cc  gate_memtext.h  gate_memtext_delete.cc  gate_memtext_delete.h  gate_memtext_impl.cc  gate_memtext_impl.h  gate_memtext_retrieval.cc  gate_memtext_retrieval.h  gate_memtext_storage.cc  gate_memtext_storage.h  main.cc  memxyctl  proxy_client.cc  proxy_client.h  wavy_core.cc  wavy_core.h
src/cclog/: Makefile.am  cclog.h.erb
src/memproto/: memtext.h  memtext.rl
src/mp/: Makefile.am  endian.h  exclusive.pre.h  memory.h  wavy.h
src/mp/wavy/: core.pre.h  singleton.pre.h
src/mpsrc/: Makefile.am  wavy_base.cc  wavy_connect.cc  wavy_core.h  wavy_listen.cc  wavy_out.cc  wavy_port.h  wavy_port_epoll.h  wavy_port_kqueue.h  wavy_signal.cc  wavy_timer.cc
